fixed canvas stretching

--- a/frontend/static/styles/main.css
+++ b/frontend/static/styles/main.css
@@ -206,6 +206,7 @@ aside {
 canvas {
   width: 100%;
   height: 100%;
+  object-fit: contain;
 }
 .pages {
 }
